# wedding-data

./: .gitignore  Makefile  README.md  bridely.py  bridely_playwright.py  main.py  pyproject.toml  venues.json
.github/workflows/: daily-scrape.yml
data/bb/: banquet_prices.csv  banquet_prices.json  venues.csv  venues.json
data/bridely/: bridely_venue_brochures.csv  bridely_venue_brochures.json  bridely_venue_brochures_playwright.csv  bridely_venue_brochures_playwright.json  bridely_venues.csv  bridely_venues.json  bridely_venues_playwright.csv  bridely_venues_playwright.json
data/twn/: venues.csv
src/bb/: main.py
src/shared/: __init__.py  config.py
src/twn/: main.py
