[project]
name = "wedscraper"
version = "0.1.0"
description = "Wedding vendor data scraper for Singapore wedding websites"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "gql[httpx]>=3.5.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
]
